# Tmaster

./: .gitignore  README.md  gradlew  settings.gradle.kts
.github/workflows/: build_katago.yml  ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: katago.cfg
app/src/main/cpp/: CMakeLists.txt  gtp_client.cpp  gtp_client.h  katago_bridge.cpp
app/src/main/java/com/tmaster/: TmasterApp.kt
app/src/main/java/com/tmaster/analysis/: AnalysisTypes.kt  HawkEyeAnalyzer.kt
app/src/main/java/com/tmaster/data/db/: AppDatabase.kt  GameDao.kt
app/src/main/java/com/tmaster/data/model/: GameRecord.kt
app/src/main/java/com/tmaster/data/repository/: GameRepository.kt
app/src/main/java/com/tmaster/engine/: EngineManager.kt  GtpEngine.kt  GtpProtocol.kt  KataGoSdkEngine.kt  LocalKataGo.kt  ModelManager.kt  RemoteEngine.kt
app/src/main/java/com/tmaster/error/: ErrorReporter.kt  TmasterException.kt
app/src/main/java/com/tmaster/game/: BoardState.kt  GameController.kt  Handicap.kt  Move.kt  SgfParser.kt  SgfWriter.kt  Stone.kt  Timer.kt
app/src/main/java/com/tmaster/log/: CrashHandler.kt  FileLogger.kt  LogCollector.kt  LogLevel.kt  TLogger.kt
app/src/main/java/com/tmaster/teacher/: ConversationManager.kt  KnowledgeBase.kt  LlmProvider.kt  StudentProfile.kt  ToolRegistry.kt
app/src/main/java/com/tmaster/ui/: MainActivity.kt
app/src/main/java/com/tmaster/ui/analysis/: AnalysisScreen.kt
app/src/main/java/com/tmaster/ui/board/: BoardCanvas.kt  BoardOverlay.kt
app/src/main/java/com/tmaster/ui/navigation/: AppNavigation.kt
app/src/main/java/com/tmaster/ui/play/: PlayScreen.kt  PlayViewModel.kt
app/src/main/java/com/tmaster/ui/settings/: LogViewerScreen.kt  SettingsScreen.kt
app/src/main/java/com/tmaster/ui/teacher/: TeacherScreen.kt
app/src/main/java/com/tmaster/ui/theme/: BoardTheme.kt  Theme.kt
app/src/main/java/go/ikatagosdk/gojni/: KataGoBridge.kt
app/src/main/java/ikatagosdk/: Client.kt  ClientRunner.kt  DataCallback.kt  Ikatagosdk.kt  KatagoRunner.kt  NativeLoader.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: architecture.md
scripts/: build_katago_android.sh  bundle_model.sh
